<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/headlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/headview1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@raw/head00" />

        <TextView
            android:id="@+id/hinttext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="点击更换您的头像"
            android:textColor="@color/register_text_color"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/preference_single_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/username"
            android:textColor="#000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="#202020"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/preference_single_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/nickname"
            android:textColor="#000"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edit_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLength="10"
            android:padding="8dp"
            android:textColor="#202020"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/preference_single_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/signature"
            android:textColor="#000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/text_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="#202020"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edit_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLength="18"
            android:padding="8dp"
            android:textColor="#202020"
            android:textSize="17sp" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style_green"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="#fff"
        android:textSize="20sp" />

</LinearLayout>