<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_menu"
    android:layout_width="270dip"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:background="@color/menu_color"
    android:orientation="vertical"
    android:visibility="invisible" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/show_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/head00" />

        <TextView
            android:id="@+id/show_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="noUser"
            android:textColor="@color/group_text_color"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/group_bg"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/friends_layout"
            android:layout_width="135dip"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/friends"
                android:layout_width="match_parent"
                android:layout_height="39dip"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/group1"
                android:textColor="@color/group_text_color"
                android:textSize="@dimen/group_text_margin" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/groups_layout"
            android:layout_width="135dip"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/groups"
                android:layout_width="match_parent"
                android:layout_height="39dip"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/group2"
                android:textColor="@color/group_text_color"
                android:textSize="@dimen/group_text_margin" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/menu_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/menu_bottom"
        android:baselineAligned="false" >

        <RelativeLayout
            android:id="@+id/personal_info_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/personal_info"
                android:textColor="@color/group_text_color"
                android:textSize="@dimen/menu_bottom_margin" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/setting"
                android:textColor="@color/group_text_color"
                android:textSize="@dimen/menu_bottom_margin" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>